# ShopManagerEng

./: .gitignore  .hfignore  Blog.md  LICENSE  README.md  __init__.py  client.py  constants.py  inference.py  models.py  openenv.yaml  pyproject.toml  rollout_baseline.py  start.sh  test_env_smoke.py  train_jewelry_grpo.py  ui.py
server/: Dockerfile  ShopManagerEng_environment.py  __init__.py  app.py  market_data.py  sqlite_store.py
training/: __init__.py  parse_action.py  plotting.py  prompts.py  rewards.py  rollout.py
training/training_artifacts_v1/: metrics.csv  metrics.json  training_summary.json
